# speaker-role-classifier

./: .bandit.yml  .gitignore  .releaserc.json  .safety-policy.yml  AGENTS.md  CHANGELOG.md  CI-CD-COMPARISON.md  CI-CD-FILES-CREATED.md  CI-CD-SETUP-SUMMARY.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  SECURITY-SETUP.md  SEMANTIC-RELEASE.md  TESTING.md  buildspec.yml  demo_all_features.py  example_transcript.txt  pyproject.toml  run_integration_tests.sh  send_to_lambda.sh  test_deployed_lambda.sh  test_lambda_local.py
.github/: COMMIT_CONVENTION.md  dependabot.yml
.github/workflows/: codeql.yml  deploy.yml  release.yml  security.yml  test.yml  unified-pipeline.yml
infrastructure/: ARCHITECTURE.md  PIPELINE.md  README.md  app.py  cdk.json  pipeline_stack.py  setup-pipeline.sh  speaker_role_classifier_stack.py
lambda_handler/: handler.py
src/speaker_role_classifier/: __init__.py  classifier.py  classifier_backup.py  classifier_v2.py  cli.py  safeguard.py
tests/: conftest.py
tests/features/: advanced_classification.feature  safeguard_validation.feature  speaker_classification.feature
tests/step_defs/: test_advanced_classification_steps.py  test_classification_steps.py  test_safeguard_steps.py
